Changed the fetchSize to take it from appstate and alignment issues are fixed

--- a/components/page-recon/page-recon.less
+++ b/components/page-recon/page-recon.less
@@ -105,13 +105,7 @@
 		overflow-y: hidden;
 	}
 
-	#ingested {
-		width:100% !important;
-		padding: 0!important;
-		padding-left: 15px !important;
-		padding-right: 15px !important;
-		margin: 0px !important;
-	}
+
 	#loading_img{
 		background:url('../../resources/images/spinner.gif') no-repeat center center;
 		padding:10%;
