--- a/components/recon-stats/recon-stats.less
+++ b/components/recon-stats/recon-stats.less
@@ -312,10 +312,12 @@ table#summaryStatsTab{
   border: 1px solid #97979C;
   border-top: 0px;
   border-bottom: 0px;
-  margin: 0 1%;
-  width:98% !important;
+  width:100% !important;
   padding:0 !important;
   border-width: 0px 0px;
+  padding-left: 15px !important;
+  padding-right: 15px !important;
+  margin: 0px !important;
 }
 rn-grid-ingestionstats{
   table{
